# nix-base

./: flake.nix  overlay.nix  pkgs.nix  test.nix
lib/: default.nix  moduleSystem.nix
lib/helpers/: default.nix  python.nix
lib/system/: default.nix
modules/base/: generic.nix  user.nix
modules/default/: nix.nix  options.nix
modules/system/: compact.nix  zsh.nix
modules/system/cloud/: proxmox-lxc.nix  selectel.nix  yandex.nix
modules/system/security/: openssh.nix
pkgs/: nixfmt-patched.nix
templates/py-uv/: .gitignore  flake.nix  pyproject.toml
templates/trivial/: flake.nix
