[project]
name = "example"
version = "0.0.1"
description = "my description"
authors = [{ name = "Rubikoid", email = "rubikoid@rubikoid.ru" }]
requires-python = ">= 3.12, < 4"

dependencies = []

[project.optional-dependencies]


[dependency-groups]
dev = ["ruff >= 0.15.0, < 1"]

[build-system]
requires = ["hatchling ~= 1.28.0", "editables ~= 0.5"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = false
